clusters/vmi3474918/analytics/oauth2-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: analytics-oauth2-proxy
  namespace: analytics
  labels:
    belacca.com/project: analytics
    belacca.com/component: analytics-auth
spec:
  selector:
    app.kubernetes.io/instance: analytics-oauth2-proxy
    app.kubernetes.io/name: oauth2-proxy
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
