clusters/vmi3474918/analytics/service-direct.yaml
apiVersion: v1
kind: Service
metadata:
  name: goatcounter-direct
  namespace: analytics
  labels:
    app: goatcounter
    belacca.com/project: analytics
    belacca.com/component: collector
spec:
  selector:
    app: goatcounter
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
