clusters/vmi3474918/analytics/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goatcounter
  namespace: analytics
  labels:
    app: goatcounter
    belacca.com/project: analytics
spec:
  selector:
    app: goatcounter
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
